--- a/dailyPlanner/TabBar/TabBar.storyboard
+++ b/dailyPlanner/TabBar/TabBar.storyboard
@@ -11,7 +11,7 @@
         <!--Todo View Controller-->
         <scene sceneID="lbS-Rj-RkI">
             <objects>
-                <viewController id="Arp-Pt-8dB" customClass="TodoViewController" customModule="dailyPlanner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TodoViewController" id="Arp-Pt-8dB" customClass="TodoViewController" customModule="dailyPlanner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eEs-sM-oh5">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -92,7 +92,7 @@
         <!--Calculator-->
         <scene sceneID="VA6-1q-SHA">
             <objects>
-                <viewController id="JgG-da-BAj" customClass="CalculatorViewController" customModule="dailyPlanner" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalculatorViewController" id="JgG-da-BAj" customClass="CalculatorViewController" customModule="dailyPlanner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qZl-o0-wad">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
